dnl $Id: configure.in,v 1.14 2002/03/18 23:45:46 sit Exp $
dnl
dnl Process this file with autoconf to produce a configure script.
dnl

AC_INIT(config.h.in)
AM_INIT_AUTOMAKE(ufs, 0.0)
AM_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX

dnl gtk for the visualization tool
AC_ARG_ENABLE(vis,
--enable-vis             Build the visualization tool (needs gtk),,
enable_vis=no)
if test "$enable_vis" = yes; then
	AM_PATH_GTK_FOO(1.2.0,,AC_MSG_ERROR(devel/vis needs GTK))
fi

AM_CONDITIONAL(BUILDVIS, test "$enable_vis" = yes)



dnl more checks that fuck up the gtk test
SFS_WFLAGS
AC_PROG_INSTALL
AC_PROG_LN_S
dnl AC_PROG_RANLIB

AM_DISABLE_SHARED
AM_PROG_LIBTOOL

SFS_SFS
SFS_CFLAGS

dnl setup db3
SFS_DB3
AC_SUBST(DBLIB)
AC_SUBST(DBDEPS)
DBLIB='$(top_builddir)/sfsrodb/libsfsrodb.a'
DBDEPS='$(top_builddir)/sfsrodb/libsfsrodb.a'
if test "${with_db3}" != no; then
	CPPFLAGS="$CPPFLAGS -DSLEEPYCAT"
	DBLIB="$DBLIB $DB3_LIB"
else
	DBLIB="$DBLIB"' $(top_builddir)/adb/libbtree.a'
	DBDEPS="$DBDEPS"' $(top_builddir)/adb/libbtree.a'
fi


dnl Make sure we have a mesg_buf capable libarpc
AC_MSG_CHECKING("for a good aclnt.h")
AC_EGREP_HEADER(rpccb_msgbuf,
		aclnt.h,
		AC_MSG_RESULT("found"),
		AC_MSG_ERROR("aclnt.h that defines rpccb_msgbuf not found. Install the latest build of SFS")
)

dnl let directories share header files
for lib in chord dhash sfsrodb svc lsd; do
    CPPFLAGS="-I"'$(top_srcdir)'"/$lib $CPPFLAGS"
done
    CPPFLAGS="-I"'$(top_builddir)'"/svc $CPPFLAGS"

ETAGS_ARGS='-C /dev/null'
AC_SUBST(ETAGS_ARGS)

AC_OUTPUT(Makefile svc/Makefile  
	sfsrodb/Makefile dhash/Makefile lsd/Makefile
	chord/Makefile chordcd/Makefile
	 devel/Makefile ddns/Makefile ddns/ddnsq/Makefile)
