SUBDIRS = observers protocols eventgenerators failuremodels \
          topologies misc events p2psim

EXTRA_DIST = Makefile.incl ../utils/skiplist.h \
	    example/events.txt \
	    example/protocol.txt \
	    example/topology.txt \
	    example/silly-events.txt \
	    example/silly-prot.txt \
	    example/silly-top.txt
