SUBDIRS = observers protocols eventgenerators failuremodels \
          topologies misc events libtask p2psim

EXTRA_DIST = Makefile.incl ../utils/skiplist.h \
	    example/events.txt \
	    example/protocol.txt \
	    example/topology.txt \
	    example/silly-events.txt \
	    example/silly-prot.txt \
	    example/silly-top.txt \
	    example/accordion_args \
	    example/chord_args \
	    example/tapestry_args \
	    example/kademlia_args \
	    example/kelips_args \
	    example/koorde_args \
	    example/onehop_args \
	    scripts/run-simulations.pl \
	    scripts/merge-stats.pl \
	    scripts/avg-stats.pl \
	    scripts/find_convexhull.py \
	    scripts/convexhull.py \
	    scripts/make-graph.pl 
